mule-user-guide/v/3.4/anypoint-connectors.adoc
= Anypoint Connectors

== Overview

=== What is an Anypoint Connector?

*Anypoint Connectors* facilitate easy integration of your Mule applications with third-party APIs. Use them within your application's flow to send and receive data via a specific API. 

Selected Anypoint Connectors are automatically bundled with Mule Studio, but there is a large library of additional connectors available for download. You can browse the full library on the http://www.mulesoft.org/extensions[connectors site]. 

=== When do I need a connector vs. an endpoint?

Connectors function like endpoints by sending and receiving data over a transport. However, while endpoints are generic for a widely-used protocol (such as JDBC, FTP, HTTP, POP3, etc) each connector is built to optimize the connection with a specific third-party API, such as Salesforce or Twitter.

Endpoints will serve your needs in most cases where you are connecting to something that has a standard format or protocol. For example, if you are connecting to an Oracle database or a MS SQL database, you can use the link:/mule-user-guide/v/3.4/database-jdbc-endpoint-reference[JDBC endpoint], because those databases output their data in a standard format. There is no need for an Oracle or MS SQL connector. Similarly, you don't need a connector for a particular kind of file, like a .csv file. The link:/mule-user-guide/v/3.4/file-endpoint-reference[File endpoint] can be configured to input and output data to any kind of text file format, including .csv, so there is no need for a csv connector. 

=== What if I need a connector that isn't listed on the extensions site?

If none of the connectors on the http://www.mulesoft.org/extensions[connectors site] meet your needs and your use case is not covered by an link:/mule-user-guide/v/3.4/studio-endpoints[endpoint], you have several options:

* Contact MuleSoft and the community via the link:http://forums.mulesoft.com[forum] – either MuleSoft or a member of the community might be in the process of building the connector you need or can point you to a community-built connector hosted elsewhere.
* Consider building your own. Check out the link:/anypoint-connector-devkit/v/3.4[Anypoint Connector DevKit] documentation for more information.

== Connector Support Categories

Connectors fall into one of the following categories. See link:https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Connector Support Policy] for more information.

[width="99a",cols="50a,50a",options="header"]
|===
|Type |Description
|*Community*
|

MuleSoft or members of the MuleSoft community write and maintain the link:https://www.mulesoft.com/exchange#!/?types=connector&filters=Community&sortBy=name[Community connectors]. Connectors built by the community or MuleSoft are generally open-source, although each package may vary. Partner-built connectors may not be open-source. Contact the partner directly for more information. You do not need any special account or license to use a Community connector.

|*MuleSoft Certified*
|

For link:https://anypoint.mulesoft.com/exchange/anypoint-platform/#!/?types=connector&filters=MuleSoft-Certified&sortBy=name[MuleSoft Certified Connectors] are developed by MuleSoft’s partners and developer community and are reviewed and certified by MuleSoft. For support, customers should contact the MuleSoft partner that created the MuleSoft Certified connector.

|*Select*
|

MuleSoft maintains link:https://www.mulesoft.com/exchange#!/?types=connector&filters=Select&sortBy=name[Select Connectors]. Connectors included in the open source Mule distribution can be used by everyone, however support is only included in an Anypoint Platform subscription. To use all other Select Connectors and access support, you must have an active Anypoint Platform subscription.

|*Premium*
|

MuleSoft maintains link:https://www.mulesoft.com/exchange#!/?types=connector&filters=Premium&sortBy=name[Premium connectors]; you must have an active CloudHub Premium plan or an Enterprise subscription with an entitlement for the specific connector you wish to use.
|===

== Accessing Connectors

Mule Studio includes a number of bundled connectors in the standard download. See the table below for more information about these connectors. 

MuleSoft and members of the Mule community have developed dozens more connectors that you can use in your applications. Refer to the link:/mule-user-guide/v/3.4/installing-connectors[Installing Connectors] documentation to learn how to download and install connectors in Mule Studio.

The following table summarizes the Anypoint connectors that come bundled with the Mule Studio download.

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|  |Web Service API |Description |Reference
|image:cmis.png[cmis] |CMIS |Using this connector, your Mule application can interact with any CMS system that implements the Content Management Interoperability Services (CMIS) specification. |http://www.mulesoft.org/extensions/cmis-cloud-connector[Mule CMIS Connector]


image:Studio_AC_facebook.png[Studio_AC_facebook] |Facebook |Using this connector, your Mule application can interact with all the functions available through the Facebook Dialogs API, using OAuth2 for authentication. |http://www.mulesoft.org/extensions/facebook-connector[Mule Facebook Connector]


image:Studio_AC_GoogleSpreadsheets.png[Studio_AC_GoogleSpreadsheets] |Google Spreadsheets |Using this connector, your Mule application can access, create and modify Google Docs spreadsheets. This connector uses OAuth2 for authentication. |http://www.mulesoft.org/node/383[Mule Google Spreadsheets Connector]


image:magento.png[magento] |Magento |Using this connector, your Mule application can interact with Magento, a feature-rich eCommerce platform built on open-source technology that provides online merchants with great control over the look, content and functionality of their eCommerce store. |http://www.mulesoft.org/extensions/magento-cloud-connector[Mule Magento Connector]


image:Studio_AC_Salesforce.png[Studio_AC_Salesforce] |Salesforce |Using this connector, your Mule application can connect with the Salesforce API for querying, creating, and updating information using either regular username and password through the SOAP API or using OAuth as the authentication mechanism. |http://www.mulesoft.org/extensions/salesforce-cloud-connector[Mule Salesforce Connector]


image:Studio_AC_twitter.png[Studio_AC_twitter] |Twitter |Using this connector, your Mule application can interact with the Twitter REST API, which provides simple interfaces for most Twitter functionality. |http://www.mulesoft.org/extensions/twitter[Mule Twitter Connector]

If you are developing your applications in an XML editor outside of Mule Studio, you can install Anypoint connectors as Maven dependencies. To make the connector available to a Mavenized Mule application, add the connector repositories to your `pom.xml` file, add the module as a dependency, and add it to the packaging process of your applications.

You can find the latest installation links and instructions for each connector on the connector-specific reference pages, accessible from the http://www.mulesoft.org/extensions[connectors site].

=== Installing Connectors

MuleSoft and members of the Mule community have developed dozens of extra connectors that you can use in your applications. Refer to the link:/mule-user-guide/v/3.4/installing-connectors[Installing Connectors]  documentation to learn how to download and install connectors in Mule Studio and Maven.

== Configuring Connectors 

For configuration information specific to individual connectors, refer to the specific references for individual connectors provided on the http://www.mulesoft.org/extensions[connectors site]. Each connector page has links to connector documentation, video examples, and complete example code.

== Connector Compatibility

Starting with (and including) Mule 3.2, MuleSoft has made all connectors forward-compatible with all new releases of Mule. This group of connectors, which are referred to as **3.2-compatible** or **Studio-compatible**, can be configured either through the Properties pane in the Mule Studio visual interface or through an XML editor.

Connectors developed prior to Mule ESB 3.2 can be deployed only with the version of Mule for which they were developed. In other words, these legacy connectors are neither forward nor backward-compatible.

Legacy connectors cannot be configured or deployed by Mule Studio, which debuted with Mule 3.2. Instead, you must configure all legacy connectors with an XML editor, then deploy them exclusively with the Mule release for which they are listed as compatible.

== Connector Support

See link:https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Connector Support Policy] for more information.

== See Also

* link:http://forums.mulesoft.com/spaces/14/anypoint-connectors.html[Forums Connector Category]
* link:https://www.mulesoft.com/exchange#!/?types=connector&sortBy=name[Anypoint Exchange]
* Learn how to build your own connectors with the link:/anypoint-connector-devkit/v/3.4[Anypoint Connector DevKit].
